SERVER-33928 Don't assert system.indexes or system.namespaces have UUIDs